vlib/v/checker/tests/prefix_err.out
vlib/v/checker/tests/prefix_err.vv:5:6: error: cannot take the address of true
    3 | }
    4 | 
    5 | b := &true
      |      ^
    6 | _ := &get()
    7 | _ := &(get())
vlib/v/checker/tests/prefix_err.vv:6:6: error: cannot take the address of get()
    4 | 
    5 | b := &true
    6 | _ := &get()
      |      ^
    7 | _ := &(get())
    8 | _ := &(get() + 1)
vlib/v/checker/tests/prefix_err.vv:7:6: error: cannot take the address of get()
    5 | b := &true
    6 | _ := &get()
    7 | _ := &(get())
      |      ^
    8 | _ := &(get() + 1)
    9 | _ := &10
vlib/v/checker/tests/prefix_err.vv:8:6: error: cannot take the address of get() + 1
    6 | _ := &get()
    7 | _ := &(get())
    8 | _ := &(get() + 1)
      |      ^
    9 | _ := &10
   10 | _ := &"Hi"
vlib/v/checker/tests/prefix_err.vv:9:6: error: cannot take the address of 10
    7 | _ := &(get())
    8 | _ := &(get() + 1)
    9 | _ := &10
      |      ^
   10 | _ := &"Hi"
   11 | _ := &"${b}"
vlib/v/checker/tests/prefix_err.vv:10:6: error: cannot take the address of 'Hi'
    8 | _ := &(get() + 1)
    9 | _ := &10
   10 | _ := &"Hi"
      |      ^
   11 | _ := &"${b}"
   12 | _ := &`c`
vlib/v/checker/tests/prefix_err.vv:11:6: error: cannot take the address of '$b'
    9 | _ := &10
   10 | _ := &"Hi"
   11 | _ := &"${b}"
      |      ^
   12 | _ := &`c`
   13 | _ := &1.2
vlib/v/checker/tests/prefix_err.vv:12:6: error: cannot take the address of `c`
   10 | _ := &"Hi"
   11 | _ := &"${b}"
   12 | _ := &`c`
      |      ^
   13 | _ := &1.2
   14 | _ := &(1 + 2)
vlib/v/checker/tests/prefix_err.vv:13:6: error: cannot take the address of 1.2
   11 | _ := &"${b}"
   12 | _ := &`c`
   13 | _ := &1.2
      |      ^
   14 | _ := &(1 + 2)
   15 | _ := 12.3
vlib/v/checker/tests/prefix_err.vv:14:6: error: cannot take the address of 1 + 2
   12 | _ := &`c`
   13 | _ := &1.2
   14 | _ := &(1 + 2)
      |      ^
   15 | _ := 12.3
   16 |
vlib/v/checker/tests/prefix_err.vv:18:5: error: invalid indirect of `int`
   16 | 
   17 | a := 1
   18 | _ = *a
      |     ^
   19 | a <- 4
   20 |
vlib/v/checker/tests/prefix_err.vv:19:1: error: cannot push on non-channel `int`
   17 | a := 1
   18 | _ = *a
   19 | a <- 4
      | ^
   20 | 
   21 | _ = ~true
vlib/v/checker/tests/prefix_err.vv:21:5: error: operator ~ only defined on int types
   19 | a <- 4
   20 | 
   21 | _ = ~true
      |     ^
   22 | _ = !4
vlib/v/checker/tests/prefix_err.vv:22:5: error: ! operator can only be used with bool types
   20 | 
   21 | _ = ~true
   22 | _ = !4
      |     ^
