vlib/v/checker/tests/prefix_err.vv
fn get() int {
    return 1
}

b := &true
_ := &get()
_ := &(get())
_ := &(get() + 1)
_ := &10
_ := &"Hi"
_ := &"${b}"
_ := &`c`
_ := &1.2
_ := &(1 + 2)
_ := 12.3

a := 1
_ = *a
a <- 4

_ = ~true
_ = !4
